--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@
   margin: 0px;
   padding: 0px;
 }
+.header{
+  width: 100vw;
+  height: auto; 
+}
+.footer{
+  width: 100vw;
+  height: auto;
+}
+.main{
+  width: 100vw;
+  height: auto;
+}
