--- a/style.css
+++ b/style.css
@@ -5,21 +5,36 @@
   
 }
 .links{
-  list-style-decoration: none;
+  list-style: none;
   font-weight: 900;
 }
-.header{
+.navbar{
   width: 100vw;
   height: auto; 
 }
+
+.navbar h1{
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 .footer{
   width: 100vw;
   height: auto;
 }
+
+
 .main{
   width: 100vw;
   height: auto;
+  font-size: 1rem;
+  transition: all 2s ease-in-out 5ms;
 }
+.main:hover{
+  font-size: 1.75rem;
+}
+
+/* main content */
 .accordion{
   font-family: Arial, Helvetica, sans-serif;
   width: 450px;
@@ -49,4 +64,43 @@
 
 .accordion-item.active .accordion-content{
       display: block;
-    }
+}
+
+/* Help form */
+.section-help {
+  margin: 5rem auto;
+  text-align: center;
+  background: rgb(240, 240, 240);
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+.help-form {
+  max-width: 800px;
+  width: 95%;
+  text-align: left;
+  margin: auto;
+}
+.help-form label {
+  display: block;
+}
+
+.help-form input {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+}
+.form-group {
+  margin-top: 1rem;
+}
+.help-form textarea {
+  width: 100%;
+}
+.submit-btn {
+  background-color: rgb(44, 55, 63);
+  color: white;
+  padding: 1rem 2rem;
+  display: block;
+  margin: auto;
+  margin-top: 1rem;
+}
