--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
   height: auto;
   font-size: 1rem;
   transition: all 2s ease-in-out 5ms;
-  background-color: #415A77;
+  background-color: transparent;
 }
 .main:hover{
   font-size: 1.75rem;
@@ -81,14 +81,14 @@ body{
   margin-bottom: 10px;
   width: 20%;
   height: auto;
-  background-color: grey;
+  background-color: #0CF574;
   border-radius: 5px;
   
 }
 
 .accordion-title {
   color: #fff;
-  background-color: #dc2b2b;
+  background-color: #2F97C1;
   cursor: pointer;
   padding: 10px;
   transition: background-color 1s;
@@ -97,11 +97,11 @@ body{
 }
 
 .accordion-title:hover {
-  background-color: #9a1616;
+  background-color: #1CCAD8;
 }
 
 .accordion-content {
-  background: lightgoldenrodyellow;
+  background: #587291;
   display: none;
   padding: 10px;
   border-bottom-right-radius: 5px;
@@ -125,9 +125,11 @@ footer div.p1{
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  font-size: 1.2rem;
 }
 footer div.p2{
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  font-size: 1.2rem;
 }
