--- a/help.css
+++ b/help.css
@@ -2,7 +2,7 @@
 .section-help {
   margin: 5rem auto;
   text-align: center;
-  background: rgb(240, 240, 240);
+  background-color: rgb(240, 240, 240);
   border-radius: 10px;
   padding: 1rem;
 }
